--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -81,7 +81,7 @@
                 <span class="span_split">基本信息</span>
                 <em class="em_split"></em>
             </div>
-            <div id="divCJH" class="div_row" style="z-index: 991;">
+            <div id="divCJH" class="div_row" style="z-index: 1000;">
                 <div class="div_row_left" style="margin-left: 114px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">车架号</span>
@@ -91,15 +91,15 @@
                         <input class="input_spaninput spaninput_fontcolor" id="CJH" maxlength="17" column="CJH" type="text" style="width: 145px" />
                     </span>
                 </div>
-                <div id="divCJHTip" class="Warn" style="z-index: 990; position: relative;"></div>
+                <div id="divCJHTip" class="Warn" style="z-index: 999; position: relative;"></div>
             </div>
-            <div id="divJCPP" class="div_row" style="z-index: 999">
+            <div id="divJCPP" class="div_row" style="z-index: 998">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">品牌</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divPPText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divPPText" class="div_select_out SRK" style="position: relative; z-index: 997;">
                         <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <input type="hidden" id="PPID" />
                             <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
@@ -129,7 +129,7 @@
                 </div>
                 <div id="divJCPPTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divCLYS" class="div_row" style="z-index: 998">
+            <div id="divCLYS" class="div_row" style="z-index: 995">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">车辆颜色</span>
@@ -137,21 +137,21 @@
                 <div class="div_row_right" id="div_clys_right">
                 </div>
             </div>
-            <div id="divCLYS2" class="div_row" style="z-index: 997">
+            <div id="divCLYS2" class="div_row" style="z-index: 995">
                 <div class="div_row_left" style="margin-left: 177px;">
                     <span class="spanFWCZ">&nbsp;</span>
                 </div>
                 <div class="div_row_right" id="div_clys_right2">
                 </div>
-                <div id="divCLYS2Tip" class="Warn" style="z-index: 996; position: relative;"></div>
+                <div id="divCLYS2Tip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
-            <div id="divSCSPSJ" class="div_row" style="z-index: 996;">
+            <div id="divSCSPSJ" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 72px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">首次上牌时间</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divSPNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSPNFText" class="div_select_out SRK" style="z-index: 992;">
                         <div id="divSPNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSPNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择上牌年份</span>
                             <div class="span_select_arrow"></div>
@@ -159,7 +159,7 @@
                         <div id="divSPNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSPYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSPYFText" class="div_select_out SRK" style="z-index: 992;">
                         <div id="divSPYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSPYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择上牌月份</span>
                             <div class="span_select_arrow"></div>
@@ -168,9 +168,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="divSCSPSJTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                <div id="divSCSPSJTip" class="Warn" style="z-index: 991; position: relative;"></div>
             </div>
-            <div id="divSFDQBY" class="div_row" style="z-index: 995;">
+            <div id="divSFDQBY" class="div_row" style="z-index: 990;">
                 <div class="div_row_left" style="margin-left: 56px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">是否定期4S保养</span>
@@ -184,7 +184,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divPZSZD" class="div_row" style="z-index: 994;">
+            <div id="divPZSZD" class="div_row" style="z-index: 989;">
                 <div class="div_row_left" style="margin-left: 87px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">牌照所在地</span>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCLGHCS" class="div_row" style="z-index: 993;">
+            <div id="divCLGHCS" class="div_row" style="z-index: 988;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">过户次数</span>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divNJDQ" class="div_row" style="z-index: 992;">
+            <div id="divNJDQ" class="div_row" style="z-index: 987;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">年检到期</span>
@@ -249,7 +249,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divJQXDQ" class="div_row" style="z-index: 991;">
+            <div id="divJQXDQ" class="div_row" style="z-index: 986;">
                 <div class="div_row_left" style="margin-left: 86px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">交强险到期</span>
@@ -273,7 +273,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divSYXDQ" class="div_row" style="z-index: 990;">
+            <div id="divSYXDQ" class="div_row" style="z-index: 985;">
                 <div class="div_row_left" style="margin-left: 86px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">商业险到期</span>
@@ -297,7 +297,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divXSLC" class="div_row" style="z-index: 989;">
+            <div id="divXSLC" class="div_row" style="z-index: 984;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">行驶里程</span>
@@ -308,9 +308,9 @@
                         <span class="spaninput_fontcolor">万公里</span>
                     </span>
                 </div>
-                <div id="divXSLCTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divXSLCTip" class="Warn" style="z-index: 983; position: relative;"></div>
             </div>
-            <div id="divJG" class="div_row" style="z-index: 988;">
+            <div id="divJG" class="div_row" style="z-index: 982;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">转让价格</span>
@@ -321,9 +321,9 @@
                         <span class="spaninput_fontcolor">万元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 990; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 981; position: relative;"></div>
             </div>
-            <div id="divKCDZ" class="div_row" style="z-index: 988;">
+            <div id="divKCDZ" class="div_row" style="z-index: 980;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">看车地址</span>
@@ -331,7 +331,7 @@
                 <div class="div_row_right">
                     <input class="input_input" id="KCDZ" maxlength="9" column="KCDZ" type="text" />
                 </div>
-                <div id="divKCDZTip" class="Warn" style="z-index: 990; position: relative;"></div>
+                <div id="divKCDZTip" class="Warn" style="z-index: 979; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
