--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
@@ -156,7 +156,7 @@
             </div>
             <div id="divSFDQBY" class="div_row">
                 <div class="div_row_left" style="margin-left: 56px;">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">是否定期4S保养</span>
                 </div>
                 <div class="div_row_right">
@@ -170,7 +170,7 @@
             </div>
             <div id="divYWZDSG" class="div_row">
                 <div class="div_row_left" style="margin-left: 72px;">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">有无重大事故</span>
                 </div>
                 <div class="div_row_right">
@@ -184,7 +184,7 @@
             </div>
             <div id="divNJDQ" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 101px;">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">年检到期</span>
                 </div>
                 <div class="div_row_right">
@@ -208,7 +208,7 @@
             </div>
             <div id="divJQXDQ" class="div_row" style="z-index: 994;">
                 <div class="div_row_left" style="margin-left: 86px;">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">交强险到期</span>
                 </div>
                 <div class="div_row_right">
@@ -232,7 +232,7 @@
             </div>
             <div id="divSYXDQ" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 86px;">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">商业险到期</span>
                 </div>
                 <div class="div_row_right">
@@ -274,7 +274,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
                         <span class="spaninput_fontcolor">万元</span>
                     </span>
                 </div>
