--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
@@ -84,16 +84,16 @@
                     <span class="spanFWCZ">品牌</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divPPText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divPPText" class="div_select_out SRK" style="position: relative; z-index: 997;">
                         <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="PPID" />
+                            <input type="hidden" id="PPID"/>
                             <span id="spanPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divPP" class="div_bqss" style="display: none;">
                             <div class="div_bqss_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
+                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
+                                <input class="btn btn-info" type="button" value="快速搜索"/>
                             </div>
                             <div class="div_bqss_body">
                                 <div class="div_bqss_body_mc" id="div_bqss_body_mc">
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="divCXText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 998; display: none; position: relative;">
+                    <div id="divCXText" class="div_select_out SRK" style="z-index: 996;">
                         <div id="divCXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanCX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择车系</span>
                             <div class="span_select_arrow"></div>
@@ -112,8 +112,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="divKCPPTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
-            <div id="divCLYS" class="div_row" style="z-index: 997">
+            <div id="divCLYS" class="div_row" style="z-index: 994">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">车辆颜色</span>
@@ -122,21 +123,22 @@
 
                 </div>
             </div>
-            <div id="divCLYS2" class="div_row" style="z-index: 997">
+            <div id="divCLYS2" class="div_row" style="z-index: 993">
                 <div class="div_row_left" style="margin-left: 177px;">
                     <span class="spanFWCZ">&nbsp;</span>
                 </div>
                 <div class="div_row_right" id="div_clys_right2">
 
                 </div>
+                <div id="divCLYSTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divSCSPSJ" class="div_row" style="z-index: 996;">
+            <div id="divSCSPSJ" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 72px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">首次上牌时间</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divSPNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSPNFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSPNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSPNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择上牌年份</span>
                             <div class="span_select_arrow"></div>
@@ -144,7 +146,7 @@
                         <div id="divSPNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSPYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSPYFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSPYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSPYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择上牌月份</span>
                             <div class="span_select_arrow"></div>
@@ -153,6 +155,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSCSPSJTip" class="Warn" style="z-index: 990; position: relative;"></div>
             </div>
             <div id="divSFDQBY" class="div_row">
                 <div class="div_row_left" style="margin-left: 56px;">
@@ -182,13 +185,13 @@
                     </div>
                 </div>
             </div>
-            <div id="divNJDQ" class="div_row" style="z-index: 995;">
+            <div id="divNJDQ" class="div_row" style="z-index: 989;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">年检到期</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divNJDQNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divNJDQNFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divNJDQNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanNJDQNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期年份</span>
                             <div class="span_select_arrow"></div>
@@ -196,7 +199,7 @@
                         <div id="divNJDQNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divNJDQYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divNJDQYFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divNJDQYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanNJDQYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期月份</span>
                             <div class="span_select_arrow"></div>
@@ -206,13 +209,13 @@
                     </div>
                 </div>
             </div>
-            <div id="divJQXDQ" class="div_row" style="z-index: 994;">
+            <div id="divJQXDQ" class="div_row" style="z-index: 988;">
                 <div class="div_row_left" style="margin-left: 86px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">交强险到期</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divJQXDQNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divJQXDQNFText" class="div_select_out SRK" style="z-index: 988;">
                         <div id="divJQXDQNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanJQXDQNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期年份</span>
                             <div class="span_select_arrow"></div>
@@ -220,7 +223,7 @@
                         <div id="divJQXDQNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divJQXDQYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divJQXDQYFText" class="div_select_out SRK" style="z-index: 988;">
                         <div id="divJQXDQYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanJQXDQYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期月份</span>
                             <div class="span_select_arrow"></div>
@@ -230,13 +233,13 @@
                     </div>
                 </div>
             </div>
-            <div id="divSYXDQ" class="div_row" style="z-index: 993;">
+            <div id="divSYXDQ" class="div_row" style="z-index: 987;">
                 <div class="div_row_left" style="margin-left: 86px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">商业险到期</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divSYXDQNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSYXDQNFText" class="div_select_out SRK" style="z-index: 987;">
                         <div id="divSYXDQNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSYXDQNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期年份</span>
                             <div class="span_select_arrow"></div>
@@ -244,7 +247,7 @@
                         <div id="divSYXDQNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSYXDQYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSYXDQYFText" class="div_select_out SRK" style="z-index: 987;">
                         <div id="divSYXDQYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSYXDQYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期月份</span>
                             <div class="span_select_arrow"></div>
@@ -254,7 +257,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divXSLC" class="div_row" style="z-index: 992;">
+            <div id="divXSLC" class="div_row" style="z-index: 986;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">行驶里程</span>
@@ -265,9 +268,9 @@
                         <span class="spaninput_fontcolor">万公里</span>
                     </span>
                 </div>
-                <div id="divXSLCTip" class="Warn" style="z-index: 994; position: relative;"></div>
+                <div id="divXSLCTip" class="Warn" style="z-index: 985; position: relative;"></div>
             </div>
-            <div id="divJG" class="div_row" style="z-index: 991;">
+            <div id="divJG" class="div_row" style="z-index: 984;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">转让价格</span>
@@ -278,7 +281,7 @@
                         <span class="spaninput_fontcolor">万元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 990; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 983; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
@@ -348,7 +351,7 @@
                     <span id="spanLXDH">联系人</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="LXR" column="LXR" class="span_spaninput input_input SRK" type="text" placeholder="请输入联系人" />
+                    <input id="LXR" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人" />
                     <div id="divLXRTip"></div>
                 </div>
             </div>
@@ -358,7 +361,7 @@
                     <span id="spanLXDH">联系电话</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="LXDH" maxlength="11" column="LXDH" class="span_spaninput input_input SRK" type="text" placeholder="请输入联系电话" />
+                    <input id="LXDH" maxlength="11" column="LXDH" class="input_input SRK" type="text" placeholder="请输入联系电话" />
                     <div id="divLXDHTip"></div>
                 </div>
             </div>
@@ -368,7 +371,7 @@
                     <span id="spanQQ">QQ</span>
                 </div>
                 <div class="div_row_right">
-                    <input column="QQ" class="span_spaninput input_input SRK" type="text" placeholder="请输入QQ" />
+                    <input column="QQ" class="input_input SRK" type="text" placeholder="请输入QQ" />
                 </div>
             </div>
             <div id="divFB" class="div_split" style="display: block; text-align: center; margin-top: 40px;">
