--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/FCCX.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/FCCX/FCCX_ZZF.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/FCCX/FCCX_DZF.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 }
 @section Section_Body {
@@ -16,7 +16,7 @@
             <li class="li_nav_split">></li>
             <li class="li_nav_font">@ViewData["XZQ"]房产信息</li>
             <li class="li_nav_split">></li>
-            <li class="li_nav_font">@ViewData["XZQ"]整租房</li>
+            <li class="li_nav_font">@ViewData["XZQ"]短租房</li>
         </ul>
     </div>
     <div id="divCondition" class="div_condition">
