--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
@@ -112,57 +112,17 @@
                     <div id="divLCFBTip" class="Warn" style="z-index: 991;"></div>
                 </div>
             </div>
-            <div id="divZJ" class="div_row" style="z-index: 990">
+            <div id="divSJ" class="div_row" style="z-index: 990">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
-                    <span class="spanFWCZ">房屋租金</span>
+                    <span class="spanFWCZ">房屋售价</span>
                 </div>
                 <div class="div_row_right">
-                    <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
-                        <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 100px" />
-                        <span class="spaninput_fontcolor">元/月</span>
+                    <span id="spanSJ" class="span_spaninput SRK" style="display: inline-block;">
+                        <input id="SJ" maxlength="9" column="SJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 100px" />
+                        <span class="spaninput_fontcolor">万元</span>
                     </span>
-                    <div id="divYFFSText" class="div_select_out SRK" style="z-index: 997;">
-                        <div id="divYFFSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <span id="spanYFFS" column="YFFS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择押付方式</span>
-                            <div class="span_select_arrow"></div>
-                        </div>
-                        <div id="divYFFS" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divZJTip" class="Warn" style="z-index: 989;"></div>
-                </div>
-            </div>
-            <div id="divBHFY" class="div_row" style="z-index: 988; margin-top: -18px;">
-                <div class="div_row_left">
-                    <span class="span_required"></span>
-                    <span id="spanBHFY">包含费用</span>
-                </div>
-                <div id="divBHFYText" class="div_row_right" style="position: relative">
-                </div>
-            </div>
-            <div id="divFWPZ" class="div_row" style="z-index: 987">
-                <div class="div_row_left">
-                    <span class="span_required"></span>
-                    <span id="spanFWCZ">房屋配置</span>
-                </div>
-                <div id="divFWPZText" class="div_row_right" style="position: relative">
-                </div>
-            </div>
-            <div id="divFWLD" class="div_row" style="z-index: 986;">
-                <div class="div_row_left">
-                    <span class="span_required"></span>
-                    <span id="spanFWLD">房屋亮点</span>
-                </div>
-                <div id="divFWLDText" class="div_row_right" style="position: relative">
-                </div>
-            </div>
-            <div id="divCZYQ" class="div_row" style="z-index: 985;">
-                <div class="div_row_left">
-                    <span class="span_required"></span>
-                    <span id="spanCZYQ">出租要求</span>
-                </div>
-                <div id="divCZYQText" class="div_row_right" style="position: relative">
+                    <div id="divSJTip" class="Warn" style="z-index: 989;"></div>
                 </div>
             </div>
             <div id="divXXXX" class="div_split" style="z-index: 984;">
