--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_SLC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_SLC.cshtml
@@ -4,8 +4,8 @@
 }
 @section Section_Head {
     <link href="@Url.Content("~/Areas/Business/Css/HTFB/CL/CL_ZXCDDCSLC.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_ZXCDDCSLC.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_ZXCDDCSLCYZ.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_SLC.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_SLCYZ.js")"></script>
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
@@ -28,7 +28,7 @@
         </div>
         <div id="divGQTip" class="Warn" style="z-index: 992; position: relative;"></div>
     </div>
-    <div id="divZXCDDCSLCLB" class="div_row" style="z-index: 999">
+    <div id="divSLCLB" class="div_row" style="z-index: 998;">
         <div class="div_row_left" style="margin-left: 128px;">
             <span class="span_required">*</span>
             <span class="spanFWCZ">类别</span>
@@ -42,72 +42,8 @@
                 <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                 </div>
             </div>
-            <div id="divXLText" class="div_select_out SRK">
-                <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                    <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0px;">请选择小类</span>
-                    <div class="span_select_arrow"></div>
-                </div>
-                <div id="divXL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                </div>
-            </div>
         </div>
-        <div id="divZXCDDCSLCLBTip" class="Warn" style="z-index: 992; position: relative;"></div>
-    </div>
-    <div id="divZXCXXCS" class="div_row" style="z-index: 998; display: none;">
-        <div class="div_row_left" style="margin-left: 160px;">
-            <span class="span_required">&nbsp;</span>
-            <span class="spanFWCZ"></span>
-        </div>
-        <div class="div_row_right">
-            <div id="divZXCPPText" class="div_select_out SRK" style="position: relative;">
-                <div id="divPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                    <span id="spanZXCPP" class="span_select spaninput_fontcolor" style="margin-top: 0">品牌</span>
-                    <div class="span_select_arrow"></div>
-                </div>
-                <div id="divZXCPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                </div>
-            </div>
-            <div id="divCCText" class="div_select_out SRK" style="position: relative;">
-                <div id="divCCSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                    <span id="spanCC" class="span_select spaninput_fontcolor" style="margin-top: 0">尺寸</span>
-                    <div class="span_select_arrow"></div>
-                </div>
-                <div id="divCC" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="divDDCXXCS" class="div_row" style="z-index: 998; display: none;">
-        <div class="div_row_left" style="margin-left: 160px;">
-            <span class="span_required">&nbsp;</span>
-            <span class="spanFWCZ"></span>
-        </div>
-        <div class="div_row_right">
-            <div id="divDDCPPText" class="div_select_out SRK" style="position: relative;">
-                <div id="divDDCPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                    <span id="spanDDCPP" class="span_select spaninput_fontcolor" style="margin-top: 0">品牌</span>
-                    <div class="span_select_arrow"></div>
-                </div>
-                <div id="divDDCPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                </div>
-            </div>
-            <div id="divDCDYText" class="div_select_out SRK" style="position: relative;">
-                <div id="divDCDYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                    <span id="spanDCDY" class="span_select spaninput_fontcolor" style="margin-top: 0">电池电压</span>
-                    <div class="span_select_arrow"></div>
-                </div>
-                <div id="divDCDY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                </div>
-            </div>
-            <div id="divDCRLText" class="div_select_out SRK" style="position: relative;">
-                <div id="divDCRLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                    <span id="spanDCRL" class="span_select spaninput_fontcolor" style="margin-top: 0">电池容量</span>
-                    <div class="span_select_arrow"></div>
-                </div>
-                <div id="divDCRL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                </div>
-            </div>
-        </div>
+        <div id="divSLCLBTip" class="Warn" style="z-index: 992; position: relative;"></div>
     </div>
     <div id="divXJCD" class="div_row" style="z-index: 993;">
         <div class="div_row_left" style="margin-left: 128px;">
@@ -125,19 +61,6 @@
             </div>
         </div>
         <div id="divXJCDTip" class="Warn" style="z-index: 992; position: relative;"></div>
-    </div>
-    <div id="divSYNX" class="div_row" style="z-index: 992;">
-        <div class="div_row_left" style="margin-left: 102px;">
-            <span class="span_required">*</span>
-            <span class="spanFWCZ">使用年限</span>
-        </div>
-        <div class="div_row_right">
-            <span id="spanSYNX" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="SYNX" maxlength="9" column="SYNX" type="text" style="width: 120px" />
-                        <span class="spaninput_fontcolor">年</span>
-                    </span>
-        </div>
-        <div id="divSYNXTip" class="Warn" style="z-index: 992; position: relative;"></div>
     </div>
     <div id="divJG" class="div_row" style="z-index: 992;">
         <div class="div_row_left" style="margin-left: 102px;">
